<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WearableDeviceDemo</string>
    <string name="log_out">Logout</string>
    <string name="add_new_data">Add new data</string>
    <string name="show_all_my_data">Show all my data</string>
    <string name="daily_chart">Daily chart</string>
    <string name="weekly_chart">Weekly chart</string>
    <string name="monthly_chart">Monthly chart</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="kii_log_in">Kii Login</string>
    <string name="registering">Registering</string>
    <string name="logging_in">Logging in, please wait</string>
    <string name="register_failed">Register failed!</string>
    <string name="log_in_failed">Log in failed!</string>
    <string name="save">Save</string>
    <string name="temperature_prompt">Temp.</string>
    <string name="humidity_prompt">Humidity</string>
    <string name="uv_prompt">UV</string>
    <string name="location_prompt">Location</string>
    <string name="logged_out">Already logged out!</string>
    <string name="getting_my_data">Getting data</string>
    <string name="getting_devices">Getting devices</string>
    <string name="all_my_data">All my data</string>
    <string name="select_device">Select device</string>
    <string name="device_id_prompt">Device ID</string>
    <string name="default_device_id">Device android0</string>
    <string name="save_complete">Save complete</string>
    <string name="saving">Saving...</string>
    <string name="save_failed">Save failed</string>
    <string name="getting_daily_data">Getting daily data</string>
</resources>
