<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="bottom">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:id="@+id/temperature_edit"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/temperature_edit"
            android:text="@string/temperature_prompt"
            android:layout_alignBottom="@id/temperature_edit"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="bottom">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:id="@+id/humidity_edit"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/humidity_edit"
            android:text="@string/humidity_prompt"
            android:layout_alignBottom="@id/humidity_edit"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="bottom">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:id="@+id/uv_edit"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/uv_edit"
            android:text="@string/uv_prompt"
            android:layout_alignBottom="@id/uv_edit"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="bottom">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:id="@+id/device_id_edit"
            android:text="@string/default_device_id"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/device_id_edit"
            android:text="@string/device_id_prompt"
            android:layout_alignBottom="@id/device_id_edit"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="bottom">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:id="@+id/location_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/location_text"
            android:text="@string/location_prompt"
            android:layout_alignBottom="@id/location_text"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:id="@+id/save"
        />

</LinearLayout>