<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        >

        <TextView
            android:text="@string/username_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dip"
            android:capitalize="none"
            android:inputType="textEmailAddress"
            android:id="@+id/username_edit"
            />

        <TextView
            android:text="@string/password_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="none"
            android:password="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dip"
            android:id="@+id/password_edit"
            />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:id="@+id/login_reglink"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@null"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register"
            android:background="@null"
            android:gravity="center"
            />
    </LinearLayout>
</RelativeLayout>
